commit for PNAS

--- a/R/cells_dev/cells_peak_analysis_rep.html
+++ b/R/cells_dev/cells_peak_analysis_rep.html
@@ -181,11 +181,9 @@ hljs.initHighlightingOnLoad();
 <h1>Developmental peaks</h1>
 
 <pre><code class="r">suppressPackageStartupMessages(source(&quot;~/src/seqAnalysis/R/features.R&quot;))
-library(gridExtra)
 </code></pre>
 
-<pre><code class="r">
-omp.icam &lt;- processIntersectSummary(&quot;~/s2/data/homer/peaks/intersections/cells/omp_hmc_rep1_q30_rmdup_gc_input_icam_hmc_rep1_q30_rmdup_gc_size1kb_F3_inter50_omp_hmc_rep2_q30_rmdup_r1_gc_input_icam_hmc_rep2_q30_rmdup_r1_gc_size1kb_F3.bed/summary&quot;)
+<pre><code class="r">omp.icam &lt;- processIntersectSummary(&quot;~/s2/data/homer/peaks/intersections/cells/omp_hmc_rep1_q30_rmdup_gc_input_icam_hmc_rep1_q30_rmdup_gc_size1kb_F3_inter50_omp_hmc_rep2_q30_rmdup_r1_gc_input_icam_hmc_rep2_q30_rmdup_r1_gc_size1kb_F3.bed/summary&quot;)
 
 ngn.icam &lt;- processIntersectSummary(&quot;~/s2/data/homer/peaks/intersections/cells/ngn_hmc_rep1_q30_rmdup_gc_input_icam_hmc_rep1_q30_rmdup_gc_size1kb_F3_inter50_ngn_hmc_rep2_q30_rmdup_r1_gc_input_icam_hmc_rep2_q30_rmdup_r1_gc_size1kb_F3.bed/summary&quot;)
 </code></pre>
